--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "OmoTool",
-  "version": "1.0.0",
-  "description": "A tool to automate modifying OMORI",
+  "name": "OmoPatcher",
+  "version": "1.0.1",
+  "description": "OMORI nw.js upgrade toolkit",
   "main": "index.js",
-  "repository": "git@github.com:rphsoftware/OmoTool.git",
+  "repository": "git@github.com:rphsoftware/OmoPatcher.git",
   "author": "Rph <rphsoftware@gmail.com>",
   "license": "MIT",
   "private": false,
